--- a/src/layouts/MainLayouts.astro
+++ b/src/layouts/MainLayouts.astro
@@ -101,8 +101,7 @@ const { title } = Astro.props;
     </style>
   </head>
   <body
-    class="bg-background-light dark:bg-background-dark font-display text-white overflow-hidden h-screen flex flex-col">
-    <!-- <IntroAnimation /> -->
+    class="bg-background-light dark:bg-background-dark font-display text-white overflow-hidden h-screen flex flex-col relative">
     <Navbar />
     <div class="flex flex-1 overflow-hidden">
       <Sidebar />
@@ -153,6 +152,11 @@ const { title } = Astro.props;
       /* ======================================================
        * SIDEBAR
        * ====================================================== */
+      function toggleExplorer() {
+        const explorer = document.getElementById("explorer");
+        explorer.classList.toggle("-translate-x-full");
+      }
+
       window.setActiveFile = async function (fileName) {
         await setFileActive(fileName);
 
